[package]
name = 'corona-scraper'
version = '0.1.0'
authors = ['mdrokz <mohammadmunshi@gmail.com>']
edition = '2018'

[lib]
crate-type = [
    'cdylib',
    'rlib',
]

[features]
default = ['console_error_panic_hook']

[dependencies]
wasm-bindgen = '0.2'
wasm-bindgen-futures = '0.4.9'
serde_json = '1.0.48'
serde = '1.0.104'
serde_derive = '1.0.104'
scraper = '0.11.0'

[dependencies.reqwest]
version = '0.10'
features = [
    'blocking',
    'json',
]

[dependencies.console_error_panic_hook]
version = '0.1.1'
optional = true

[dependencies.wee_alloc]
version = '0.4.2'
optional = true

[dev-dependencies]
wasm-bindgen-test = '0.2'
[profile.release]
opt-level = 's'
